@@ -51,6 +51,7 @@
 		counts are known at prepare-time now
 	added sslmode, tlsversion, sslcrl, and sslcrlpath options to mysql
 		connection module connect-string options
+	router db connection module supports fetchatonce option now
 	
 
 1.0.1 - updated sqlr-bench to create "db"-bench.png
